# beta-bot

./: .gitignore  ExpLocBetaBot.m  README.md  prueba2.txt
beacon_gazebo_sim/: package.xml
beacon_gazebo_sim/models/beacon/: model.sdf
beta-bot-test-matlab/: ExpLocBetaBot.m
beta-bot-test-matlab/fase1/Fase1_Antiguos/: f1_mru_3.txt  f1_mru_5.txt  f1_mru_ResTabla.txt  f1_mrua_1.txt  f1_mrua_3.txt  f1_mrua_4.txt  f1_mrua_5.txt  f1_static_1.txt  f1_static_2.txt  f1_static_3.txt  f1_static_4.txt  f1_static_5.txt  f1_static_ResTabla.txt
beta-bot-test-matlab/fase1/MRU/: ExpLocBetaBot.m  f1_mru_1.txt  f1_mru_2.txt  f1_mru_4.txt  f1_mru_ResTabla.txt
beta-bot-test-matlab/fase1/MRUA/: ExpLocBetaBot.m  f1_mrua_2.txt  f1_mrua_ResTabla.txt
beta-bot-test-matlab/fase1/Static/: ExpLocBetaBot.m  f1_static_1.txt  f1_static_2.txt  f1_static_3.txt  f1_static_Q_baja.txt  f1_static_R_baja.txt  f1_static_ResTabla.txt
beta-bot-test-matlab/fase2/: ExpLocBetaBot.m  f2_beacons_1.txt  f2_beacons_2.txt  f2_beacons_3.txt  f2_beacons_4.txt  f2_beacons_5.txt  f2_beacons_ResTabla.txt
beta-bot-test-matlab/fase3/: ExpLocBetaBot.m  f3_1.txt  f3_2.txt  f3_3.txt  f3_4.txt  f3_5.txt  f3_QBAJA_NUEVA_1.txt  f3_QMUBAJA_1.txt  f3_QSUPERBAJA_1.txt  f3_Qalta_1.txt  f3_Qbaja_1.txt  f3_Ralta_1.txt  f3_Rbaja_1.txt  f3_ResTabla.txt
beta-bot-test-matlab/fase4/: ExpLocBetaBot.m  f4_1.txt  f4_2.txt  f4_ResTabla.txt
beta-bot-test-matlab/fase5/: f5_1.txt  f5_2.txt  f5_3.txt  f5_4.txt  f5_5.txt  f5_ResTabla.txt
custom_docker_images/nvidia_ros/: Dockerfile
src/BetaBot/beacons_gazebo/: CMakeLists.txt  package.xml
src/BetaBot/beacons_gazebo/include/beacons_gazebo/: rssi_noise.h
src/BetaBot/beacons_gazebo/launch/: spawn_beacons.launch
src/BetaBot/beacons_gazebo/models/beacon/: model.dae  model.sdf
src/BetaBot/beacons_gazebo/msg/: ReceiverInSyncPacked.msg
src/BetaBot/beacons_gazebo/src/: beacon_model_plugin.cpp  beacons_sync_world_plugin.cpp  receiver_model_plugin.cpp  rssi_noise.cpp  rssi_to_distance.cpp
src/BetaBot/beta_bot_bringup/: CMakeLists.txt  package.xml
src/BetaBot/beta_bot_bringup/launch/: start_simulation.launch
src/BetaBot/beta_bot_bringup/rviz_cfg/: outdoor_flight.rviz  outdoor_flight_debug.rviz  outdoor_flight_results.rviz
src/BetaBot/beta_bot_description/: CMakeLists.txt  package.xml
src/BetaBot/beta_bot_description/meshes/: collision.dae
src/BetaBot/beta_bot_description/urdf/: main.xacro  quadrotor_plugins.gazebo.xacro
src/BetaBot/beta_bot_description/urdf/include/: generic_camera.urdf.xacro  quadrotor_sensors.gazebo.xacro
src/BetaBot/beta_bot_experiments/: CMakeLists.txt  package.xml
src/BetaBot/beta_bot_experiments/src/: experiments.cpp
src/BetaBot/beta_bot_experiments/tests/: prueba1.txt  prueba2.txt
src/BetaBot/beta_bot_gazebo/: CMakeLists.txt  package.xml
src/BetaBot/beta_bot_gazebo/launch/: load_world.launch  spawn_quadrotor.launch
src/BetaBot/beta_bot_gazebo/worlds/: empty.world  small_city.world
src/BetaBot/beta_bot_localization/: CMakeLists.txt  package.xml
src/BetaBot/beta_bot_localization/include/: ekf.hpp
src/BetaBot/beta_bot_localization/launch/: beta_bot_localization.launch  robot_localization.launch  stereo_odometry.launch
src/BetaBot/beta_bot_localization/msg/: IniLocalization.msg  PoseRPYWithCovariance.msg
src/BetaBot/beta_bot_localization/src/ekf_node/: ekf.cpp  ros_wrapper.cpp
src/BetaBot/beta_bot_localization/src/ekf_node/MRUA_model_IMU_GPS_Bar/: ekf.cpp  ekf.hpp  ros_wrapper.cpp
src/BetaBot/beta_bot_localization/src/ekf_node/MRU_model_IMU_GPS_Bar/: ekf.cpp
src/BetaBot/beta_bot_localization/src/ekf_node/static_model_IMU_GPS_Bar/: ekf.cpp  ekf_static_model_IMU_GPS_Bar.cpp  ros_wrapper.cpp
src/BetaBot/beta_bot_localization/src/ekf_node_v2/: ekf.cpp  ekf.hpp  ros_wrapper.cpp
src/BetaBot/beta_bot_localization/src/ekf_node_v3/: ekf.cpp  ekf.hpp  ros_wrapper.cpp
src/BetaBot/beta_bot_localization/src/ekf_node_v4/: ekf.cpp  ekf.hpp  ros_wrapper.cpp  stereo_odometry_wrapper.cpp
src/BetaBot/beta_bot_localization/src/ekf_node_v5/: ekf.cpp  ekf.hpp  ros_wrapper.cpp
src/BetaBot/beta_bot_localization/src/extra_nodes/: robotLocalizationLaunch.sh  rvizLaunch.sh  stereoLaunch.sh  worldLaunch.sh
src/BetaBot/beta_bot_localization/src/ground_truth_publisher/: ground_truth_publisher.cpp
src/BetaBot/beta_bot_localization/src/ini/: Gauss_Newton_Algorithm.cpp
src/BetaBot/beta_bot_localization/src/topicAdapter/: topicAdapter.cpp  topicAdapterControls.cpp
src/BetaBot/beta_bot_teleop/: CMakeLists.txt  package.xml
src/BetaBot/beta_bot_teleop/launch/: control_mando.launch
src/BetaBot/beta_bot_teleop/scripts/: ui_hector_quad.py
src/BetaBot/beta_bot_teleop/src/: joy_to_cmd_vel.cpp
src/FlyBot/hector_gazebo/beacon_gazebo_sim/launch/: spawn_beacons.launch
src/FlyBot/hector_gazebo/hector_gazebo_worlds/launch/: load_world.launch
src/FlyBot/hector_gazebo/hector_gazebo_worlds/worlds/: drone_race_track.world  neighborhood.world  office_cpr_construction.world  small_city.world
src/FlyBot/hector_quadrotor/flybot/: CMakeLists.txt  package.xml
src/FlyBot/hector_quadrotor/flybot/launch/: start_simulation.launch
src/FlyBot/hector_quadrotor/flybot/src/: rssi_to_distance.cpp
src/FlyBot/hector_quadrotor/hector_quadrotor_description/: CMakeLists.txt
src/FlyBot/hector_quadrotor/hector_quadrotor_description/urdf/: quadrotor_base.urdf.xacro
src/FlyBot/hector_quadrotor/hector_quadrotor_gazebo/launch/: spawn_quadrotor.launch
src/FlyBot/hector_quadrotor/hector_quadrotor_gazebo/urdf/: CMakeLists.txt  quadrotor_plugins.gazebo.xacro
src/Localization/beta_bot_localization/: CMakeLists.txt  package.xml
src/Localization/beta_bot_localization/launch/: beta_bot_localization.launch  stereo_odometry.launch
src/Localization/beta_bot_localization/src/: topicAdapter.cpp  topicAdapterControls.cpp
src/Localization/robot_localization_betabot/: CMakeLists.txt  package.xml
src/Localization/robot_localization_betabot/launch/: robot_localization.launch
src/external_dependencies/hector_quadrotor/hector_quadrotor_gazebo_plugins/: CMakeLists.txt
(+10 files in other folders)
