<?xml version="1.0"?>
<package format="2">
  <name>beta_bot_experiments</name>
  <version>0.0.0</version>
  <description>The beta_bot_experiments package</description>

  <maintainer email="aglora@todo.todo">aglora</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>beta_bot_localization</depend>

</package>
