<?xml version="1.0"?>
<package format="2">
  <name>beta_bot_localization</name>
  <version>0.0.0</version>
  <description>The beta_bot_localization package</description>

  <maintainer email="everyone@todo.todo">arturo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hector_uav_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>hector_uav_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hector_uav_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>

  <depend>beacons_gazebo</depend>
  <depend>eigen</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
